# Editor

./: gradle.properties
.github/workflows/: gradle.yml
app/src/main/java/io/github/rosemoe/sora/app/: MainActivity.kt
oniguruma-native/src/main/cpp/: CMakeLists.txt
